--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,16 @@
 .qodo
+node_modules
+.next
+coverage
+yarn.lock
+package-lock.json
+yarn-error.log
+yarn-debug.log
+yarnrc
+yarnrc.bak
+yarnrc
+yarnrc.bak
+.env
+.env.*
+npm fund
+
