--- a/WeekFour/tokenizedvotes/packages/hardhat/package.json
+++ b/WeekFour/tokenizedvotes/packages/hardhat/package.json
@@ -21,6 +21,7 @@
     "verify": "hardhat etherscan-verify"
   },
   "dependencies": {
+    "@chainlink/contracts": "^1.3.0",
     "@inquirer/password": "^4.0.2",
     "@openzeppelin/contracts": "~5.0.2",
     "@typechain/ethers-v6": "~0.5.1",
@@ -39,6 +40,7 @@
     "@typechain/hardhat": "~9.1.0",
     "@types/eslint": "~8.56.12",
     "@types/mocha": "~10.0.8",
+    "@types/node": "^22.14.0",
     "@types/prettier": "~3.0.0",
     "@types/qrcode": "~1.5.5",
     "@typescript-eslint/eslint-plugin": "~8.8.1",
